// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response JSON 1`] = `"application/json; charset=utf-8"`;

exports[`Response JSON 2`] = `
{
  "content-type": "application/json; charset=utf-8",
}
`;

exports[`Response JSON 3`] = `
{
  "body": "{"foo":"bar"}",
  "code": 200,
  "cookies": [],
  "headers": {
    "content-type": "application/json; charset=utf-8",
  },
  "status": "OK",
}
`;

exports[`Response Main 1`] = `"text/plain; charset=utf-8"`;

exports[`Response Main 2`] = `
{
  "content-type": "text/plain; charset=utf-8",
  "foo": "123",
}
`;

exports[`Response Main 3`] = `
{
  "body": "",
  "code": 204,
  "cookies": [],
  "headers": {
    "content-type": "text/plain; charset=utf-8",
    "foo": "123",
  },
  "status": "No Content",
}
`;

exports[`Response Redirect 1`] = `
{
  "body": "",
  "code": 301,
  "cookies": [],
  "headers": {
    "content-type": "text/plain; charset=utf-8",
    "location": "/redirect",
  },
  "status": "Moved Permanently",
}
`;

exports[`Response Redirect 2`] = `
{
  "content-type": "text/plain; charset=utf-8",
  "location": "/redirect",
}
`;
